--- a/act5.2/formvalidation.html
+++ b/act5.2/formvalidation.html
@@ -50,9 +50,9 @@
                 </div>
 
                 <div class="button">
-                    <button onClick="window.location.reload();">Reset</button>
+                    <button onClick="">Commit</button>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                        Commit
+                        Send Verification
                       </button>
                       
                       <!-- Modal -->
