--- a/exam/likaycovid.html
+++ b/exam/likaycovid.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="style_bs.css">
+    <link rel="stylesheet" type="text/css" href="https://jmamto.github.io/Amto_WebDev_Finals/exam/bootstrap/css/style_index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link
@@ -47,14 +46,14 @@
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="C:\Users\John Michael Amto\Documents\VSCode Files\html\Final_Exam\assets\news1.png" class="d-block w-100" alt="news1">
+                      <img src="https://jmamto.github.io/Amto_WebDev_Finals/exam/assets/image/news1.png" class="d-block w-100" alt="news1">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Trump says he expects to be tested for coronavirus again on Friday</h5>
                         <p>President Trump pumps his fist as he leaves Walter Reed National Military Medical Center on Monday.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="C:\Users\John Michael Amto\Documents\VSCode Files\html\Final_Exam\assets\news2.jpg" class="d-block w-100" alt="news2">
+                      <img src="https://jmamto.github.io/Amto_WebDev_Finals/exam/assets/img/news2.jpg" class="d-block w-100" alt="news2">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Coronavirus live news: Spain imposes state of emergency in Madrid; Europe records 100,000 daily cases for first time</h5>
                         <p>The World Health Organisation’s top emergencies expert has said authorities should try to avoid “punishing” lockdowns, 
@@ -62,7 +61,7 @@
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="C:\Users\John Michael Amto\Documents\VSCode Files\html\Final_Exam\assets\news3.jpeg" class="d-block w-100" alt="news3">
+                      <img src="https://jmamto.github.io/Amto_WebDev_Finals/exam/assets/img/news3.jpeg" class="d-block w-100" alt="news3">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Coronavirus updates: Pandemic fuels U.S. teacher shortages; Trump eyes a return to rallies</h5>
                         <p>The U.S. recorded more than 56,000 new cases of the coronavirus on Thursday, the highest single-day total in nearly eight weeks, 
@@ -504,6 +503,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://jmamto.github.io/Amto_WebDev_Finals/exam/boostrap/js/script_index.js"></script>
   </body>
 </html>
