--- a/exam/likaycovid.html
+++ b/exam/likaycovid.html
@@ -482,13 +482,13 @@
             <button class="dropbtn">Services</button>
             <div class="dropdown-content">
               <a href="#">Donate Here</a>
-              <a href="#">Membership</a>
+              <a href="https://jmamto.github.io/Amto_WebDev_Finals/exam/member.html">Membership</a>
             </div>
         </div>
         <div class="dropdown">
           <button class="dropbtn">About</button>
           <div class="dropdown-content">
-            <a href="#">My Portfolio</a>
+            <a href="https://jmamto.github.io/Amto_WebDev_Midterm/exam/part2b/amto_portfolio.html">My Portfolio</a>
           </div>
       </div>
     </div>
