--- a/act6.1/instaclone.html
+++ b/act6.1/instaclone.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Act 6.1 - Insta Clone </title>
+  <title>Instaclone</title>
   <link rel="stylesheet" href="https://jmamto.github.io/Amto_WebDev_Finals/act6.1/css/style.css" type="text/css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
@@ -26,9 +26,8 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><img src="https://scontent.fmnl2-1.fna.fbcdn.net/v/t1.0-9/74586277_2717956504965952_8163895336843083776_o.jpg?_nc_cat=102&_nc_sid=a4a2d7&_nc_eui2=AeH16wyhGRlSMVKkxQP16oK7_71KA7e6jVj_vUoDt7qNWNyeOlDAFkRXmySYz62IAb5vyGg-ybxdXi49-1cyDLxn&_nc_ohc=eOmtWCHM9M8AX-Vjx0h&_nc_ht=scontent.fmnl2-1.fna&oh=4122e8df500a448de0c52e0a55d83714&oe=5FAA9144" class="icon3"></a>
         <div class="dropdown-menu dropdown-menu-right">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Settings</a>
+          <a class="dropdown-item" href="#" style="color=red;">Log out</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Log Out</a>
         </div>
