--- a/act6.1/instaclone.html
+++ b/act6.1/instaclone.html
@@ -27,9 +27,8 @@
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><img src="https://scontent.fmnl2-1.fna.fbcdn.net/v/t1.0-9/74586277_2717956504965952_8163895336843083776_o.jpg?_nc_cat=102&_nc_sid=a4a2d7&_nc_eui2=AeH16wyhGRlSMVKkxQP16oK7_71KA7e6jVj_vUoDt7qNWNyeOlDAFkRXmySYz62IAb5vyGg-ybxdXi49-1cyDLxn&_nc_ohc=eOmtWCHM9M8AX-Vjx0h&_nc_ht=scontent.fmnl2-1.fna&oh=4122e8df500a448de0c52e0a55d83714&oe=5FAA9144" class="icon3"></a>
         <div class="dropdown-menu dropdown-menu-right">
           <a class="dropdown-item" href="#">Settings</a>
-          <a class="dropdown-item" href="#" style="color=red;">Log out</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Log Out</a>
+          <a class="dropdown-item" href="#" style="color=red;">Log Out</a>
         </div>
       </li>
 
